--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 				    <li><a href="#works" class="page-scroll">Produtos</a></li>
 				    <li><a href="#about-us" class="page-scroll">Sobre Mim</a></li>
 				    <li><a href="#contact" class="page-scroll">Contactos</a></li>
-				    <li><a href="http://nunofilipe.pt/nfccloud/index.php/login" class="page-scroll" target="_blank">Área Privada</a></li>
+				    <li><a href="http://nunofilipe.pt/nfccloud/index.php/login" class="page-scroll" target="_self">Área Privada</a></li>
                 </ul>
             </div>
             <!-- /.navbar-collapse -->
