--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     
     <!-- Favicons
     ================================================== -->
-    <link rel="icon" type="image/png" sizes="16x16" href="img/favicon/favicon-16x16.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="img/favicon/icon-16x16.png">
 
     <!-- Bootstrap -->
     <link rel="stylesheet" type="text/css"  href="css/bootstrap.css">
